ZGC for some reason not an option on java 17 even though on bare metal I can use it, removing for testing.